force-app/main/default/objects/Global_Site_Part_Parameters_ISPM__c/fields/InventoryPartTemplate_ID__c.field-meta.xml
<CustomField>
    <fullName>InventoryPartTemplate_ID__c</fullName>
    <label>InventoryPartTemplate_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>