force-app/main/default/objects/Global_Site_Part_Parameters_ISPM__c/fields/InventoryPartType__c.field-meta.xml
<CustomField>
    <fullName>InventoryPartType__c</fullName>
    <label>InventoryPartType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>