force-app/main/default/objects/Global_Site_Part_Parameters_ISPM__c/fields/InventorySite__c.field-meta.xml
<CustomField>
    <fullName>InventorySite__c</fullName>
    <label>InventorySite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>