force-app/main/default/objects/Global_Site_Part_Parameters_ISPM__c/fields/LeadTimeLL__c.field-meta.xml
<CustomField>
    <fullName>LeadTimeLL__c</fullName>
    <label>LeadTimeLL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>