force-app/main/default/objects/Global_Site_Part_Parameters_ISPM__c/fields/MfgSite__c.field-meta.xml
<CustomField>
    <fullName>MfgSite__c</fullName>
    <label>MfgSite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>