force-app/main/default/objects/Global_Site_Part_Parameters_ISPM__c/fields/PurchasePartTemplate_ID__c.field-meta.xml
<CustomField>
    <fullName>PurchasePartTemplate_ID__c</fullName>
    <label>PurchasePartTemplate_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>