force-app/main/default/objects/Global_Site_Part_Parameters_ISPM__c/fields/SalesSite__c.field-meta.xml
<CustomField>
    <fullName>SalesSite__c</fullName>
    <label>SalesSite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>