force-app/main/default/objects/Global_Site_Part_Parameters_ISPM__c/fields/SERIALTRACKCODE__c.field-meta.xml
<CustomField>
    <fullName>SERIALTRACKCODE__c</fullName>
    <label>SERIALTRACKCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>