force-app/main/default/objects/Global_Site_Part_Parameters_ISPM__c/fields/Sourcing_Option__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Option__c</fullName>
    <label>Sourcing_Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>