force-app/main/default/objects/Global_Site_Part_Parameters_ISPM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SITE__c</columns>
    <columns>LeadTimeLL__c</columns>
    <columns>LeadTimeUL__c</columns>
    <columns>SERIALTRACKCODE__c</columns>
    <columns>InventorySite__c</columns>
    <columns>InventoryPartType__c</columns>
    <columns>InventoryPartTemplate_ID__c</columns>
    <columns>SalesSite__c</columns>
    <columns>Sourcing_Option__c</columns>
    <columns>PurchaseSite__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>